# FirstMark

./: .env.example  .gitignore  AGENTS.md  AGNO_QUICK_START.md  CLAUDE.md  GEMINI.md  LINKEDIN_FINDER_README.md  LINKEDIN_README.md  MAKEFILE_GUIDE.md  Makefile  Phase2_alignment_prep.md  README.md  REQUIREMENTS.md  airtable_schema_diff_report.md  demo_agent_usage.py  interviewprompt.md  linkedin_examples.py  linkedin_finder.py  linkedin_finder_example.py  linkedin_finder_v2.py  linkedin_search.py  linkedin_tools.py  main.py  mkdocs.yml  package.json  pyproject.toml  temp_agno.md  wb_aidev4_python.sh
.claude/: AIDEV_REVIEW.md  README.md  SKILL_CREATOR_EVALUATION.md  settings.json  toggles.env
.claude/.archive/: COMMAND_INTEGRATION_REVIEW.md
.claude/hooks/: test.sh  (+5 more)
backend/: .env.example  AIRTABLE_SCHEMA.md  N8N_SETUP.md  README.md  requirements.txt
brainstorming/: skill_design_plan.md
case/: WB-case_notes.md  WORKFLOW_ANALYSIS.md  WORKFLOW_QUICK_REF.md  airtable_builder_prompt.md  data_schema.md  presentation_content_inventory.md  presentation_outlines_alternatives.md  presentation_plan.md  role_spec_design.md  solution_strategy.md  solution_strategy_v1.md  solution_strategy_v2.md  solution_strategy_v3.md  tech_specs.md  technical_spec.md  technical_spec_V2.md  tracking.md  wbcasenotes_v0.1.md  wbcasenotes_v1.md
data/: Platform-Assessments-Grid view.csv  bulk_candidates.csv  bulk_candidates_parsed.json  demo_candidates.csv  mock_candidates.csv
demo/: __init__.py  agentos_app.py  agents.py  airtable_client.py  app.py  models.py  screening_helpers.py  screening_service.py  settings.py  workflow.py
demo_planning/: AGNO_REFERENCE_GUIDE.md  airtable_ai_spec.md  airtable_schema.md  alignment_issues_and_fixes.md  data_design.md  deep_research_findings.md  role_spec_design.md  screening_workflow_spec.md  v1_alignment_conflicts.md
docs/: agent_os_integration_spec.md  agentos_integration_proposal.md  contributing.md  getting_started.md  index.md  user_guide_comprehensive.md
reference/: Firm_DeepResearch.md  GuildScrape.xlsx  Interview_info.md  OAI_deepresearchapi.md  Your First CFO A Playbook For Success In Year One.md  case_brief.md  deep_research_test_results.md  development_principles.md  fmc_portco_export.csv  lc_deepagents.md  role_overview.md  startup_tax.md
research/: Firm_DeepResearch.md  interviewprep_111325.md  interviewprompt.md
scripts/: README.md  README_REPORTS.md  create_summary.js  generate_markdown_reports.py  process_portfolio.js  scrape_companies.js  test_deep_research.py  test_screen_integration.py  test_webhook_basic.py  validate_airtable_client.py
spec/: airtable_webhook_simplification.md  constitution.md  kiss_yagni_revision.md  prd.md  spec.md  v1_minimal_spec.md  v1_minimal_spec_agno_addendum.md
tests/: __init__.py  test_agentos_api_integration.py  test_agentos_app.py  test_agentos_session_registration.py  test_agentos_workflow_mocked.py  test_airtable_client.py  test_app.py  test_models_validation.py  test_prompts.py  test_quality_check.py  test_research_agent.py  test_scoring.py  test_screening_helpers.py  test_settings.py  test_workflow.py  test_workflow_smoke.py
tmp/: README.md  agno_sessions.db
(+647 files in other folders)
